--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,9 @@ local.properties
 # Code Recommenders
 .recommenders/
 
+# Ignore .class files
+.class
+
 # Scala IDE specific (Scala & Java development for Eclipse)
 .cache-main
 .scala_dependencies
