--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,7 @@ local.properties
 .recommenders/
 
 # Ignore .class files
-.class
+*.class
 
 # Scala IDE specific (Scala & Java development for Eclipse)
 .cache-main
