--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,9 @@ local.properties
 # Ignore .class files
 *.class
 
+# Ignore .project files
+.project
+
 # Scala IDE specific (Scala & Java development for Eclipse)
 .cache-main
 .scala_dependencies
