--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
     <property name="classes.dir" value="${build.dir}/classes"/>
     <property name="jar.dir"     value="${build.dir}/jar"/>
 
-    <property name="main-class"  value="TestClassForView"/>
+    <property name="main-class"  value="Robotubbies"/>
 
     <target name="clean">
         <delete dir="${build.dir}"/>
